# wucc

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  conanfile.py  rustfmt.toml
.github/workflows/: build.yml
src/: args.rs  hexdump.rs  main.rs  misc.rs
src/cli/: color_writer.rs  mod.rs
src/compilers/: common.rs  embed.rs  json.rs  mod.rs  yaml.rs
src/version/: cargo.rs  cmake.rs  conan.rs  export_header.rs  interfaces.rs  lua_metafile.rs  metafile.rs  mod.rs  run.rs
templates/: json_header.h  resources.cc  resources.h
test_data/: example.json  example.yml
