[package]
name = "wucc"
version = "0.2.0"
edition = "2024"
license-file = "LICENSE"
description = "whs31's utilities and compilers collection"
homepage = "https://github.com/whs31/wucc"
repository = "https://github.com/whs31/wucc"
readme = "README.md"
keywords = ["cli", "cpp", "json", "compiler"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.98"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_norway = "0.9.42"

human-panic = "2.0.3"
colored = "3.0.0"
indicatif = "0.18.0"

clap = { version = "4.5.38", features = ["derive", "color"] }

askama = { version = "0.14.0", features = ["serde_json"] }
xxd-rs = "0.4.0"
semver = "1.0.27"
regex = "1.11.3"
rand = "0.9.1"